Fix weird layout problems, don't play with !important kids!

--- a/css/base.css
+++ b/css/base.css
@@ -77,7 +77,7 @@ ul, ol {
 h1, h2, h3, h4, h5, h6 {
     font-weight: 700;
     font-family: 'Karma', serif;
-    margin-bottom: 20px;
+    margin-bottom: 20px !important;
     text-align: center;
 }
 
